Prevent text wrap

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -284,6 +284,10 @@ h3 {
     transform: rotate(26deg);
 }
 
+.tilt-wrapper {
+    white-space: nowrap;
+}
+
 /* ==========================================================================
    SECTION-SPECIFIC
    ========================================================================== */
